src/styles/global.scss
html{
    overflow-y: hidden;
    overflow-x: hidden;
}

.popover-carts {
    .items-container {
        display    : flex;
        align-items: flex-start;
        gap        : 5px;

        .items {
            padding: 10px 0;
        }

        .price {
            color: #ee4d2d;
        }


    }

    .btn {
        overflow          : hidden;
        text-overflow     : ellipsis;
        -webkit-line-clamp: 1;
        align-items       : center;
        border            : 0;
        border-radius     : 2px;
        box-shadow        : 0 1px 1px 0 rgba(0, 0, 0, .09);
        box-sizing        : border-box;
        cursor            : pointer;
        display           : flex;
        flex-direction    : column;
        font-size         : 14px;
        justify-content   : center;
        outline           : 0;
        text-transform    : capitalize;
    }

    .checkCartBtn {
        background: #ee4d2d;
        color     : #fff;
        outline   : 0;
        overflow  : visible;
        position  : relative;
        max-width : 250px;

        height : 48px;
        padding: 0 20px;

        &:hover {
            background: #f05d40;
        }
    }
}

